Revision history for Perl extension Module::Starter

1.55

        Special thanks goes to Andy Lester, who has been, still is and
            will remain an inspiration to many programmers, myself included.

        [ENHANCEMENTS]
        Added hooks for distribution building in App. Thanks to Brian D. Foy.

        * [RT #53539] Refactoring, adding hooks, described above.
        (Patch provided by brian d. foy)

        * [RT #27304] Minimal version of perl (5.006)
        (Patch provided by Alexandr Ciornii)

        * Some more refactoring in Simple::create_builder()

1.54    Tue Dec  8 09:11:00 CST 2009

        This release could not have happened without Sawyer X.

        [ENHANCEMENTS]
        Added more exclusions.  Thanks to Olivier Mengué.

        * [RT #45941] Correcting POD sections for Perl Critic (Sawyer X)

        * [RT #13847] Bail out if load fails, minimum Test::Harness (Sawyer X)

        * [RT #24110] Support for Test::CheckManifest + tests for it (Sawyer X)

        * [RT #22648] Pod::Parser (Pod::Usage) >= 1.21 (Sawyer X)
        (earliest Backpan version tested to work)

        * [RT #48723] Add metadata to META.yml (Sawyer X)
        (Patch provided by Olivier Mengué, thank you!)

        * [RT #39397] Add option to create .gitignore (Sawyer X)


1.52    Mon Jul 27 01:25:03 CDT 2009
        * Support for more licenses.  Thanks to Shlomi Fish.

        * Fix slashing problems for Windows.  Thanks Olivier Mengué.

        * Complains about extra unparsed options to try to detect
        problems that come out of misquoted variables. Thanks to Gunnar Wolf.

        * The list of files to ignore is now called ignore.txt,
        which you can turn into .cvsignore, .gitignore, MANIFEST.SKIP
        or whatever.

        * Handles authors with apostrophes in their names better.
        Thanks to, not surprisingly, Dave O'Neill.

        * Removed module requirements on Test::Pod and Test::Pod::Coverage